v1.3.2 2009-10-01 Jochen Rau <jochen.rau@typoplanet.de>

	[+BUGFIX] Added Icon for hidden terms. Thanks to Matthias Koch.

v1.3.1 2009-09-22 Jochen Rau <jochen.rau@typoplanet.de>

	[!!!][+FEATURE] Content of tables, uploads, captions, and html-cObj are now parsed, too. Please check, if this is the expected behaviour for your site. Comment out the appropriate lines in the setup if necessary.
	[+BUGFIX] Set type of maxRecurrences now to integer to make it editable in the Constants Editor.
	[+BUGFIX] Fixed a problem with empty SELECT results.

v1.3.0 2009-09-16 Jochen Rau <jochen.rau@typoplanet.de>

	[+BUGFIX] Fixed non-translated page titles in backlink (Thanks to Oliver Berg for reporting). Resolves #4478.
	[+BUGFIX] Fixed an issue with the parser (appended terms to cObj in some rare cases).

v1.2.1 2009-08-31 Jochen Rau <jochen.rau@typoplanet.de>

	[+BUGFIX] Fixed link in documentation (thanks to Klemens Zleptnik).

v1.2.0 2009-08-26 Jochen Rau <jochen.rau@typoplanet.de>

	[+BUGFIX] Removed dependency to TYPO3 4.3 (t3lib_div::makeInstance()) which caused a Fatal error: Uncaught exception 'RuntimeException' with message 'No 
configuration. Please include the static template.'

v1.1.0 2009-08-14 Jochen Rau <jochen.rau@typoplanet.de>

	[~TASK] Deployed contagged to TER.

v1.0.5 2009-08-14 Jochen Rau <jochen.rau@typoplanet.de>

	* FIX If two different terms with the same beginning are defined (like  "foo" and "foo bar"), the term "foo bar" now will have precedence. Otherwise it will not be found. Resolves #4249.

v1.0.4 2009-07-10 Jochen Rau <jochen.rau@typoplanet.de>

	* FIX Alternative terms (term_alt) were not searched

v1.0.3 2009-05-28 Jochen Rau <jochen.rau@typoplanet.de>

	* FIX Page browser is not localised. Resolves #3017. 
	* IMP Cache handling (useCacheHash = 1 default for all links)

v1.0.2 2009-05-28 Jochen Rau <jochen.rau@typoplanet.de>
